fixed clipping issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -62,7 +62,7 @@ section {
     padding: 20px 20px 40px 20px;
     @media only screen and (min-width: 800px) {
       display: flex;
-      overflow-x: clip;
+      padding: 0;
     }
   }
   
@@ -137,27 +137,39 @@ section {
         display: block;
       }
       .card-desktop-pattern {
+        background-image: url(../images/bg-pattern-desktop.svg);
+        background-position: center left; 
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 400px;
         position: absolute;
-        height: 36em;
-        left: -255px;
-        top: -120px;
+        top: 0;
+        left: -150px;
+        bottom: 0;
+        clip-path: inset(0 0 0 38%);
       }
       .card-desktop-avatar {
         background-image: url(../images/illustration-woman-online-desktop.svg);
         background-position: left;
         background-size: contain;
         background-repeat: no-repeat;
-        width: 100%;
-        height: 82%;
+        width: 300px;
         position: absolute;
         top: 30px;
         left: -69px;
         bottom: 0;
+        clip-path: inset(0 0 0 23%);
       }
       .card-desktop-box {
+        background-image: url(../images/illustration-box-desktop.svg);
+        background-position: left;
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 100px;
         position: absolute;
-        left: -93px;
-        top: 130px;
+        left: -52px;
+        top: 103px;
+        bottom: 0;
       }
     }
     
@@ -176,7 +188,8 @@ section {
         padding-top: 8em;
       }
       @media only screen and (min-width: 800px) {
-        padding: 0 2em;
+        padding: 2em;
+        height: 100%;
       }
     h1 {
       color: hsl(238, 29%, 16%);
